--- a/src/css/index.css
+++ b/src/css/index.css
@@ -16,3 +16,9 @@ body {
     overflow: hidden;
     display: flex;
 }
+
+wrap header {
+    width: 100%;
+    height: 44px;
+    background: blue;
+}
